--- a/css/style2.css
+++ b/css/style2.css
@@ -31,7 +31,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
     width:100%;
 }
 .links-menu-lateral{
-   /* border:1px solid yellow;*/
+    /* border:1px solid yellow;*/
 }
 .links-menu-lateral ul{
     /*border:1px solid red;*/
@@ -39,7 +39,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
     padding:5px;
 }
 .links-menu-lateral li{
-   /* border:1px solid blue;*/
+    /* border:1px solid blue;*/
     margin:10px 5px;
     display:flex;
     justify-content: center;
@@ -48,7 +48,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
     padding: 5px;
 }
 .links-menu-lateral a{
-   /* border:1px solid purple;*/
+    /* border:1px solid purple;*/
     text-decoration: none;
     color:white;
     font-size: 18px;
@@ -58,9 +58,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
     border:1px dotted #ffffff;
     font-size:20px;
 }
-.icons-menu-lateral{
-    /*border:4px solid green;*/
-    position: absolute;
+/*.icons-menu-lateral{
+    border:4px solid green;
+    position: fixed;
     bottom: 0px;
     padding:5px;
 }
@@ -71,7 +71,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
 .icons-menu-lateral p{
     display: flex;
     flex-direction: row;
-}
+}*/
 /*FORA DO MENU LATERAL*/
 .fora-menu{
     /*border:4px solid red;*/
@@ -81,11 +81,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
 
 }
 /*SUBMETER ARQUIVOS*/
-.submeter-arquivos{
+.submeter-pos{
     width:100%;
     /*border:1px solid black;*/
 }
-.titulo-submeter{
+.titulo-pos{
     height:50px;
     border:1px solid #1b084c;
     background-color: #1b084c;
@@ -93,76 +93,108 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
     align-items: center;
     padding:15px;
 }
-.titulo-submeter p{
+.titulo-pos p{
     color:white;
-    font-size: 22px;
+    font-size: 2.5vw;
     text-transform:uppercase;
     font-weight: bold;
+    margin-left: auto;
 
 }
 /*FORMULÁRIO*/
 
-.descricao{
-    min-width: 90%;
-    margin:10px auto;
-}
-.descricao h2{
+.formulario{
+    background-color: #48BBE3;
+    margin-top: 3%;
+    margin-right: 20%;
+    margin-left: 20%;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    position: relative;
     text-align: center;
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding: 20px;
+}
+.auto_modal{
+    flex-grow: 1;
+    position: relative;
+    border: 1px solid black;
+    height: 48px;
+    width: 100%;
+    border-radius: 4px;
+    flex-direction: column;
+    align-items: flex-start!important;
+    padding: 5px 16px;
+    display: flex;
+    font-family: "SofiaPro", sans-serif;
+}
+.descricao{
+    width: 90%;
+    margin:1% auto;
+    font-family: "SofiaPro", sans-serif;
+}
+
+.descricao h2{
     margin:15px 0px;
-    text-decoration: underline;
-    font-size:25px;
+    font-size: 4vw;
+    justify-content: center;
 }
 .descricao p{
     text-align: center;
-    font-size: 20px;
+    font-size: 3vw;
 }
 fieldset{
     max-width:85%;
     margin:15px auto;
     padding:5px 10px;
 }
-.secao-row label{
-    font-size:16px;
-    margin:5px;
+.secao-row label {
+    font-size: 16px;
+    margin: 5px;
 }
 
-.secao-row{
+.secao-row {
     width: 100%;
-    display:flex;
     flex-direction: row;
-    margin:7px;
+    margin: 7px;
     padding: 10px 6px;
+    align-items: center; 
 }
-.secao-row{
+
+.secao-row {
     margin: 5px 2px;
 }
+
 .non-radio input,select{
     height: 21px;
     max-width:250px;
     display: flex;
 }
 .secao-column{
-     /*border:1px solid blue;*/
     display:flex;
     justify-content: center;
     align-items:center;
-    
-}
-.secao-column div{
-    min-width:80%;
-    /*border:1px solid red;*/
     display:flex;
     flex-direction: column;
-     
-    padding:15px;
-    margin:8px auto;
+    padding:10px 5px;
+    margin:8px;
     line-height: 25px;
-    
-
 }
+
 .secao-column input{
-    display: flex;
-    max-width: 500px;
+    height:35px;
+    padding:1.5px;
+    margin:1.5px;
+}
+
+.secao-column textarea{
+    height:35px;
+    padding:1.5px;
+    margin:1.5px;
+}
+
+.secao-column select{
     height:35px;
     padding:1.5px;
     margin:1.5px;
@@ -174,17 +206,20 @@ fieldset{
 }
 /*LISTAGEM*/
 .listagem-arquivos{
-   /* border:1px solid blue;*/
-    margin:15px;
+    /* border:1px solid blue;*/
+    width: 90%;
+    margin: 20px auto;
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    overflow-x: auto;
 }
-.listagem-arquivos h2{
-    margin:5px;
-}
-.listagem-arquivos h3{
-    margin:5px;
-}
+
 .listagem-arquivos h2,h3{
-    text-align:center;
+    margin:5px;
+    color: #48BBE3;
+    text-align: center;
+    font-size: 2vw;
 }
 /*TABELAS*/
 table{
@@ -192,25 +227,118 @@ table{
     padding:5px 4px;  
     border:1px solid;
     min-width:95%;
-    margin:15px;
+    margin: 15px auto;
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    font-size: 1.5vw;
+    overflow-x: auto;
 }
 table thead{
     padding:4px;
+    background-color: #48BBE3;
+    color: white;
 }
 table thead th{
     padding:8px;
 }
 table tbody{
-   /* border:1px solid red;*/
+    /* border:1px solid red;*/
 }
 table tbody tr{
-       /* border:1px solid yellow;*/
+    /* border:1px solid yellow;*/
 
 }
 table tbody tr td{
-      /*  border:1px solid blue;*/
-        padding:4px;
+    /*  border:1px solid blue;*/
+    padding:4px;
 
+}
+
+th, td {
+    padding: 10px;
+    text-align: center;
+    border: 1px solid #ddd;
+}
+tbody tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+tbody tr:hover {
+    background-color: #f1f1f1;
+}
+.botoes-comandos {
+    display: flex;
+    gap: 0.5em;
+    justify-content: center;
+    flex-wrap: wrap; /* Permite que os botões quebrem linha se necessário */
+}
+
+.botoes-comandos a {
+    text-decoration: none; 
+}
+
+.botoes-comandos a button {
+    all: unset; /* Remove todos os estilos padrão do link */
+    display: inline-block; /* Necessário para que o botão mantenha seu comportamento */
+    color: white;
+    padding: 0.5em 1em;
+    cursor: pointer;
+    border-radius: 4px;
+    font-size: 1em;
+    width: auto;
+    margin: 0.5em 0;
+    transition: background-color 0.3s;
+}
+.botoes-comandos a .alterar {
+    background-color: #007bff;
+    border: 1px solid #007bff;
+}
+
+.botoes-comandos a .deletar {
+    background-color: #dc3545;
+    border: 1px solid #dc3545;
+}
+
+.botoes-comandos a .alterar:hover {
+    background-color: #0069d9;
+}
+
+.botoes-comandos a .deletar:hover {
+    background-color: #c82333;
+}
+
+@media (max-width: 600px) {
+    table, thead, tbody, th, td, tr {
+        display: block;
+    }
+    th {
+        text-align: right;
+        display: block;
+    }
+    td {
+        text-align: right;
+        display: block;
+        border: none;
+        position: relative;
+        padding-left: 50%;
+    }
+    td:before {
+        content: attr(data-label);
+        position: absolute;
+        left: 0;
+        width: 50%;
+        padding-left: 10px;
+        font-weight: bold;
+        white-space: nowrap;
+        font-size: 1.5vw;
+    }
+    .botoes-comandos {
+        justify-content: flex-end; 
+    }
+    .botoes-comandos a button {
+        font-size: 0.8em; /* Ajusta o tamanho da fonte em telas pequenas */
+        padding: 0.4em 0.8em; /* Ajusta o padding em telas pequenas */
+    }
 }
 /**/
 button{
@@ -225,10 +353,24 @@ button{
     align-items:center;
 
 }
-#enviar{
-    background-color: #28a745;
-    border:1px solid #28a745;
+#enviar, #alterar{
+    background-color: #007bff;
+    border:1px solid #007bff;
     color:white;
+    font-size: 20px;
+    flex-grow: 1;
+    position: relative;
+    height: 48px;
+    width: 100%;
+    border-radius: 4px;
+    align-items: center;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    font-family: "SofiaPro", sans-serif;
+    margin-left: 10px;
+    margin-right: 10px;
+
 
 }
 #entrar{
@@ -240,18 +382,198 @@ button{
     background-color: #ffc107;
     border:1px solid#ffc107;
 }
-#alterar{
-    background-color: #6f42c1;
-    border:1px solid #6f42c1;
-    color:white;
-}
-#deletar{
-    background-color: #dc3545;
-    border:1px solid #dc3545;
-    color:white;
-}
+
 textarea{
-    max-width: 500px;
     height:100px;
     resize: none
 }
+
+select{
+    max-width: 2000px;
+    height:100px;
+    resize: none;
+    width: 101% !important;
+}
+
+/* Esconde o input */
+input[type='file'] {
+    display: none
+}
+
+/* Aparência que terá o seletor de arquivo */
+.labelfile {
+    background-color: #3498db;
+    border-radius: 5px;
+    color: #fff;
+    cursor: pointer;
+    margin: 10px;
+    padding: 6px 20px
+}
+input[type='file'] {
+    display: none
+}
+
+.input-wrapper labelfile {
+    background-color: #3498db;
+    border-radius: 5px;
+    color: #fff;
+    margin: 10px;
+    padding: 6px 20px
+}
+
+.input-wrapper labelfile:hover {
+    background-color: #2980b9
+}
+
+/* Menu lateral */
+.sidebar {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    background-color: #3498db;
+    overflow-y: auto;  
+    transition: 0.5s;
+    padding-top: 20px;
+}
+
+.sidebar a {
+    padding: 8px 8px 10px 8px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #fff;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidebar a:hover {
+    color: #000;
+}
+
+.sidebar .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+/* Botão usado para abrir o menu lateral*/
+.openbtn {
+    z-index: 1;
+    font-size: 20px;
+    cursor: pointer;
+    background-color: #3498db;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    margin: 10px;
+    position: fixed;
+    top: 50%;
+    left: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+}
+
+.openbtn i {
+    font-size: 24px;
+}
+
+.openbtn:hover {
+    background-color: #2980b9;
+}
+
+/* Conteúdo do menu*/
+#main {
+    transition: margin-left .5s;
+    padding: 16px;
+}
+
+/* Responsividade do menu*/
+@media screen and (max-width: 600px) {
+    .sidebar {
+        width: 100%;
+        height: 100%;
+    }
+    .sidebar a {
+        font-size: 18px;
+        padding: 8px 8px 8px 16px;
+    }
+    .sidebar .closebtn {
+        font-size: 36px;
+        top: 15px;
+        right: 20px;
+    }
+    .openbtn {
+        font-size: 18px;
+        padding: 8px 10px;
+        width: 40px;
+        height: 40px;
+        top: 50%;
+    }
+    #main {
+        padding: 10px;
+    }
+}
+#radio {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+}
+
+.radio-group {
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+}
+
+.radio-group input[type="radio"] {
+    margin-right: 5px;
+}
+
+.radio-group label {
+    margin-right: 15px;
+}
+
+.user-icon-container {
+    margin-left: auto;
+}
+.user-icon {
+    cursor: pointer;
+    color: white; 
+    font-size: 2.5vw; 
+}
+.user-info {
+    display: none;
+    position: fixed;
+    top: 70px;
+    right: 10px;
+    background-color: white;
+    border: 1px solid #ccc;
+    padding: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    z-index: 1;
+}
+.user-info label {
+    font-weight: bold;
+}
+.user-info p {
+    margin: 5px 0;
+}
+.user-info button {
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 3px;
+    width: 100%;
+    margin: auto;
+}
+
